fixed toolbar overlapping below to cards, now remains on same line

--- a/src-frontend/src/app/app.component.css
+++ b/src-frontend/src/app/app.component.css
@@ -4,6 +4,7 @@
 }
 
 .toolbar {
+  white-space:nowrap;
   position: fixed;
   top: 0;
   display: block;
